# WinReclaim

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md  release-trigger.json
docs/: README.md  accessibility.md  architecture.md  build-week.md  command-api.md  data-layout.md  development.md  faq.md  installation.md  licensing.md  model-sources.md  privacy.md  releases.md  rule-authoring.md  rules.md  safety.md  storage-assistant-evaluation.md  storage-assistant.md  testing.md  threat-model.md  troubleshooting.md
landing-page/: README.md  index.html  package.json  script.js  styles.css  vercel.json
scripts/: apply-ultra-mode.mjs  apply_classic_cleanup.py  check-generic-copy.mjs  fix_classic_cleanup.py  set-version.mjs  (+1 more)
src/: App.tsx  (+9 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_data.rs  assistant_commands.rs  cloud.rs  domain.rs  lib.rs  main.rs  policy.rs
src-tauri/src/actions/: external.rs  filesystem.rs  mod.rs
src-tauri/src/assistant/: download.rs  inference.rs  mod.rs  prompt.rs
src-tauri/src/commands/: assistant.rs  mod.rs
src-tauri/src/domain/: assistant.rs  mod.rs  types.rs
src-tauri/src/insights/: mod.rs
src-tauri/src/intent/: mod.rs  openai.rs  openrouter.rs  rules.rs  selector.rs
src-tauri/src/planner/: mod.rs
src-tauri/src/platform/windows/: commands.rs  filesystem.rs  mod.rs  system_storage.rs
src-tauri/src/receipts/: mod.rs
src-tauri/src/rules/: catalog.rs
src-tauri/src/scanner/: discovery.rs  mod.rs  profile.rs  sizing.rs  system_cache.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/vault/: mod.rs
(+51 files in other folders)
