[package]
name = "winreclaim"
version = "0.1.0"
description = "Local-first Windows storage intelligence"
authors = ["Amaan Syed"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "winreclaim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
hex = "0.4"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
