[package]
name = "winreclaim"
version = "1.1.0"
description = "Local-first Windows storage intelligence"
authors = ["Amaan Syed"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "winreclaim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
hex = "0.4"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10.1"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Shell"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
